Data 5033 extract news analysis prompts from lambda into python library (#43)
* initial commit

* desc added

--- a/apps/news-research/lambda/llm_consumer/news_consumer/Dockerfile
+++ b/apps/news-research/lambda/llm_consumer/news_consumer/Dockerfile
@@ -9,8 +9,8 @@ RUN pip install --upgrade pip
 RUN pip install --trusted-host pypi.org --trusted-host files.pythonhosted.org -r requirements.txt
 
 # Copy the shared utility llm_handler.py from the llm_handler directory
-COPY llm_handler/llm_handler.py .
-COPY llm_handler/requirements.txt .
+COPY llm_lib/llm_handler/llm_handler.py .
+COPY llm_lib/llm_handler/requirements.txt .
 RUN pip install --trusted-host pypi.org --trusted-host files.pythonhosted.org -r requirements.txt
 
 
