--- a/apps/broker-bot/requirements.txt
+++ b/apps/broker-bot/requirements.txt
@@ -7,7 +7,7 @@ docx2txt
 llama-index-embeddings-openai
 llama-index
 wandb
-streamlit
+streamlit==1.36.0
 spacy
 nest-asyncio
 llama-index-llms-bedrock-converse
