--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ pydantic>=2.9.2,<3.0.0
 pandas>=2.2.3,<2.3.0
 pyarrow>=17.0.0,<18.0.0
 moto[all]>=5.0.16,<5.1.0
+aiohttp>=3.10.6,<3.11.0
+aiohttp-retry>=2.8.3,<3.0.0
